<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenRemote</string>
    <string name="title_activity_project">Project</string>
    <string name="Project">Project</string>
    <string name="Settings">Settings</string>
    <string name="OR_CONSOLE_LOAD_ERROR_URL"></string>
    <string name="OR_CONSOLE_LOAD_TIMEOUT">5000</string>
    <string name="OR_CONSOLE_IGNORE_PAGE_ERRORS">true</string>
    <string name="SHARED_PREF_REFRESH_TOKEN">REFRESH_TOKEN</string>
    <string name="fatalError">Sorry, there is a problem.</string>
    <string name="fatalErrorExplain">The service is not available, please try again later.</string>
    <string name="httpError">Invalid response from service.</string>
    <string name="httpErrorExplain">Can\'t connect to service.</string>
    <string name="downloading_file">Downloading File</string>
    <string name="downloading_enabled">Downloading enabled</string>
    <string name="error_downloading">Error downloading file</string>
    <string name="download_completed">Download completed</string>
    <string name="background_location_alert_title">Background location needed</string>
    <string name="background_location_alert_body">In order to receive these notifications when the app is running in the background, background location access is needed.\nNo location history is stored, only the latest location is saved.\nDo you want to enabled it in the settings?</string>
    <string name="location_background_disabled_title">Background location disabled</string>
    <string name="background_location_decline">No</string>
    <string name="background_location_accept">Yes</string>
    <string name="button_accept">Accept</string>
    <string name="domain">Domain</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="connect_to_app">Connect to your app</string>
    <string name="enter_app_domain">ENTER THE APP DOMAIN</string>
    <string name="could_not_connect_to_domain">Could not connect to domain.\nPlease verify address.</string>
    <string name="select_an_app">SELECT AN APP</string>
    <string name="app">App</string>
    <string name="select_the_realm">SELECT THE REALM</string>
    <string name="realm">Realm</string>
    <string name="finish">Finish</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_app_first">Select app first</string>
    <string name="error_getting_app_info">Error getting app info</string>
    <string name="select_realm_first">Select realm first</string>
    <string name="app_incompatible">Console app isn\'t compatible with the Generic OR app</string>
    <string name="no_apps_found">No apps found on this domain</string>
    <string name="add">ADD</string>
</resources>
